# sha-256

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  run.sh  test.txt
include/SHA256/: sha256.h
lib/: utils.h
src/: main.cc  sha256.cc
